# nitwittery

./: .dprint.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.gradle.kts  eclipse-formatter.xml  settings.gradle.kts
.github/: get-release-notes.sh  parse-manifest-key.sh
.github/workflows/: ci.yml  release.yml
docs/: ideas.md
nitwittery-plugin/: Cargo.toml  build.gradle.kts
nitwittery-plugin/src/: config.rs  lib.rs
nitwittery-plugin/src/features/: mod.rs
nitwittery-plugin/src/features/initial_player_spawning/: config.rs  handlers.rs  locate.rs  mod.rs
nitwittery-plugin/src/main/resources/: plugin.yml
papermc/: Cargo.toml
papermc-loader/src/: lib.rs
papermc-macros/: Cargo.toml
papermc-macros/src/: lib.rs
papermc/src/: api.rs  build_id.rs  callbacks.rs  ctx.rs  dispatch.rs  java.rs  jobject_repr.rs  lib.rs  logger.rs  macros.rs  plugin_init.rs  registration.rs  setup_api.rs  sync_call.rs  util.rs
papermc/src/bukkit/: audience.rs  command.rs  command_map.rs  command_sender.rs  component.rs  dye_color.rs  environment.rs  event_priority.rs  handler_list.rs  key.rs  location.rs  mini_message.rs  mod.rs  plugin.rs  plugin_manager.rs  respawn_reason.rs  scheduler.rs  server.rs  structure.rs  structure_search_result.rs  world.rs
papermc/src/bukkit/dialog/: action_button.rs  click_callback.rs  dialog.rs  dialog_action.rs  dialog_after_action.rs  dialog_base.rs  dialog_body.rs  dialog_type.rs
papermc/src/bukkit/entity/: mod.rs  player.rs  sheep.rs
papermc/src/bukkit/event/: async_player_spawn_location_event.rs  entity_damage_by_entity_event.rs  mod.rs  player_interact_entity_event.rs  player_join_event.rs  player_post_respawn_event.rs  player_respawn_event.rs
papermc/src/main/java/io/papermc/: Dialogs.java  NativeLoader.java  RustCallable.java  RustCommand.java  RustPlugin.java  RustReloadablePlugin.java  RustTracingSubscriber.java
papermc/src/testing/: args.rs  battery.rs  fixtures.rs  mod.rs  runner.rs  selftest.rs
