[package]
name = "nitwittery-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
eyre.workspace = true
jni.workspace = true
papermc.workspace = true
rand = "0.9"
tracing.workspace = true

[lib]
crate-type = ["cdylib"]
