[package]
name = "nitwittery-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
eyre.workspace = true
jni.workspace = true
papermc.workspace = true
rand = "0.10"
tracing.workspace = true

[features]
tests = ["papermc/tests"]

[lib]
crate-type = ["cdylib"]
