[package]
name = "papermc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A library to facilitate building PaperMC plugins in Rust."

[dependencies]
arc-swap.workspace = true
eyre.workspace = true
jni.workspace = true
jni-sys.workspace = true
libc.workspace = true
linkme = { workspace = true, optional = true }
papermc-macros = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
tests = ["dep:linkme", "dep:papermc-macros"]

[lib]
crate-type = ["rlib"]
